# vanguard-emu

./: CMakeLists.txt  README.md#
include/: wraith.h
src/: attestation.cpp  fingerprint.cpp  gateway.cpp  launcher.cpp  log.cpp  main.cpp  pipe_server.cpp  protobuf.cpp  puuid.cpp  session.cpp  stealth.cpp
